--- a/example.config.yml
+++ b/example.config.yml
@@ -26,9 +26,8 @@ pihole_password: pihole
 rclone_type: dropbox
 rclone_token: {"access_token":"XXXX","token_type":"Bearer","refresh_token":"YYYY,"expiry":"ZZZZ"}
 
-# telegram configuration
-telegram_chatid: 1234
-telegram_token: 1111:AAAA
+# discord configuration
+webhook_url: https://discordapp.com/api/webhooks/xxx/yyy
 
 # certificate configuration
 cert_detail: /C=IN/ST=West Bengal/L=Kolkata/O=Home, Inc./OU=Vaultwarden/CN=VaultPI Vaultwarden
